[project]
name = "comfyui-image-tools"
description = "Nodes:BatchImageResizeProcessor, SingleImagePathLoader, SingleImageUrlLoader"
version = "1.0.0"
license = "LICENSE"
dependencies = ["rembg", "opencv-python", "torchvision", "torch", "numpy", "requests"]

[project.urls]
Repository = "https://github.com/knuknX/ComfyUI-Image-Tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Image-Tools"
Icon = ""
